Minor bug fixes for mobile-first design

--- a/styles/lightDesign_v1.5.css
+++ b/styles/lightDesign_v1.5.css
@@ -74,9 +74,10 @@ button {
 
 .pictureWrapper {
   display: flex;
+  width: 100%;
   align-items: center;
   box-sizing: border-box;
-  padding-bottom: 1.5rem;
+  padding-bottom: 1rem;
 }
 
 #navBarWrapper {
