--- a/styles/lightDesign_v1.5.css
+++ b/styles/lightDesign_v1.5.css
@@ -41,10 +41,12 @@ button {
 
 .primaryButtons button {
   border: none;
-  border-radius: 20px;
+  border-radius: 50px;
   box-shadow: 1px 1px 1px #347b56;
+  font-size: medium;
+  color: white;
   margin: auto;
-  padding: 0.25rem 0.5rem;
+  padding: 0.75rem 1rem;
   background: #1a7452;
   background: linear-gradient(180deg, #1a7452 55%, #347b56 100%);
 }
@@ -144,7 +146,7 @@ button {
 .myName,
 .navBarTitles {
   text-decoration: none;
-  color: #111812;
+  color: white;
   font-size: 1rem;
   line-height: 1.2;
   white-space: nowrap;
@@ -201,6 +203,10 @@ button {
 /*End Navigation Bar*/
 
 /*Sections*/
+section {
+  padding: 5rem 0;
+}
+
 #landingSection,
 #projectsSection {
   background-color: #f8f8ff;
@@ -249,6 +255,7 @@ button {
 #socialMediaSection {
   background-color: #111812;
   border: none;
+  padding: 1rem 0;
 }
 /*End Sections*/
 
@@ -616,6 +623,7 @@ div.col.projectType {
 
 .pageclip-form__success {
   background: #eeeef5;
+  width: 100%;
   border-radius: 20px;
 }
 
