--- a/styles/lightDesign_v1.5.css
+++ b/styles/lightDesign_v1.5.css
@@ -43,7 +43,7 @@ button {
   border: none;
   border-radius: 50px;
   box-shadow: 1px 1px 1px #347b56;
-  font-size: medium;
+  font-size: large;
   color: white;
   margin: auto;
   padding: 0.75rem 1rem;
@@ -147,7 +147,7 @@ button {
 .navBarTitles {
   text-decoration: none;
   color: white;
-  font-size: 1.25rem;
+  font-size: large;
   line-height: 1.2;
   white-space: nowrap;
 }
@@ -671,7 +671,7 @@ textarea {
 }
 
 .socialMediaItem {
-  float: initial;
+  display: flex;
   flex: 1;
   padding: 0.75rem;
   text-decoration: none;
@@ -679,13 +679,16 @@ textarea {
 
 .socialMediaButton {
   background: #f8f8ff;
-  width: 40px;
-  height: 40px;
-  margin: auto;
-  padding: 2.5px;
+  width: 50px;
+  height: 50px;
+  padding: 0.25rem;
   border: none;
   border-radius: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
+
 /*END SOCIAL MEDIA SECTION*/
 
 /* FOOTER */
