--- a/styles/lightDesign_v1.5.css
+++ b/styles/lightDesign_v1.5.css
@@ -45,7 +45,7 @@ button {
   box-shadow: 1px 1px 1px #347b56;
   font-size: large;
   font-weight: bold;
-  color: white;
+  color: #f8f8ff;
   margin: auto;
   padding: 0.75rem 1rem;
   background: #1a7452;
@@ -77,8 +77,9 @@ button {
 
 .pictureWrapper {
   display: flex;
+  flex-direction: row;
   width: 100%;
-  align-items: center;
+  justify-content: center;
   box-sizing: border-box;
   padding-bottom: 1rem;
 }
@@ -136,6 +137,7 @@ button {
 }
 
 /*My Name (Home "Button")*/
+
 #myName {
   display: flex;
   flex-direction: column;
@@ -147,7 +149,7 @@ button {
 .myName,
 .navBarTitles {
   text-decoration: none;
-  color: white;
+  color: #f8f8ff;
   font-size: large;
   font-weight: bold;
   line-height: 1.2;
@@ -319,7 +321,7 @@ section {
   box-shadow: 2px 2px 3px #111812;
   transition: 0.2s ease-in;
   width: 95%;
-  max-width: 350px;
+  max-width: 500px;
   height: auto;
   aspect-ratio: 1/1;
   align-self: center;
@@ -353,6 +355,13 @@ section {
 /*END LANDING SECTION*/
 
 /*ABOUT ME SECTION*/
+#education,
+#techStack1,
+#techStack2 {
+  display: flex;
+  flex-direction: column;
+}
+
 .blockTitles {
   text-align: center;
   padding: 0.25rem;
@@ -406,9 +415,10 @@ img.projectPictures {
   aspect-ratio: initial;
   height: auto;
   width: 95%;
-  max-width: 500px;
+  max-width: 750px;
   display: flex;
-  align-items: center;
+  flex-direction: row;
+  justify-content: center;
 }
 
 .projectTitle {
@@ -417,6 +427,9 @@ img.projectPictures {
 }
 
 .projectContainer {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   padding-bottom: 2.5rem;
 }
 
@@ -621,6 +634,12 @@ div.col.projectType {
 */
 
 /* CONTACT SECTION */
+#contactForm {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 .pageclip-form__submit::after {
   border-color: #252525;
   border-left-color: #347b56;
@@ -706,3 +725,15 @@ footer {
   border: none;
 }
 /*END FOOTER*/
+
+/* @MEDIA */
+
+@media screen and (width >= 768px) {
+  #landing,
+  #education,
+  #techStack1,
+  #techStack2 {
+    flex-direction: row;
+    gap: 10px;
+  }
+}
