--- a/styles/lightDesign_v1.5.css
+++ b/styles/lightDesign_v1.5.css
@@ -107,6 +107,7 @@ button {
 #newNavBar {
   width: 100%;
   height: 75px;
+
   background: linear-gradient(40deg, #1a7452 44%, #347b56 100%);
   border-radius: 0px 0px 20px 20px;
   box-shadow: 0px 2px 3px #111812;
@@ -197,7 +198,9 @@ button {
 }
 
 .navBarItem {
-  margin: 0.25rem auto;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
   padding: 0.75rem 1rem;
   background: linear-gradient(40deg, #1a7452 44%, #347b56 100%);
   border-radius: 50px;
@@ -736,4 +739,47 @@ footer {
     flex-direction: row;
     gap: 10px;
   }
+}
+
+@media screen and (width >= 1024px) {
+  /*Navigation Bar*/
+  #newNavBar {
+    height: 50px;
+  }
+
+  #menu {
+    display: none;
+    visibility: none;
+    opacity: 0;
+  }
+
+  #myName {
+    align-items: baseline;
+  }
+
+  #navBarItems {
+    flex-direction: row;
+    width: 100%;
+    justify-content: center;
+    top: 0;
+    z-index: 1000;
+    padding-top: 0.15rem;
+  }
+
+  #navBarItems.hide {
+    opacity: 1;
+    visibility: visible;
+    display: flex;
+    background: transparent;
+    border-radius: none;
+    box-shadow: none;
+    flex-direction: row;
+  }
+
+  .navBarItem {
+    background: transparent;
+    border-radius: none;
+    box-shadow: none;
+  }
+  /*End Navigation Bar*/
 }
