--- a/styles/lightDesign_v1.5.css
+++ b/styles/lightDesign_v1.5.css
@@ -121,6 +121,7 @@ button {
   display: flex;
   align-items: center;
   flex: 0 0 auto;
+  padding: 0 0.5rem;
 }
 
 #menuButton img {
@@ -162,6 +163,7 @@ button {
   display: flex;
   align-items: center;
   flex: 0 0 auto;
+  padding: 0 0.5rem;
 }
 
 #themeChanger img {
@@ -181,7 +183,7 @@ button {
 #navBarItems {
   width: 20%;
   display: flex;
-  padding: 0.5rem;
+  padding: 1rem 1.5rem;
   list-style-type: none;
   flex-direction: column;
   align-items: center;
@@ -739,6 +741,10 @@ footer {
     flex-direction: row;
     gap: 10px;
   }
+
+  #navBarItems {
+    padding: 1rem 0;
+  }
 }
 
 @media screen and (width >= 1024px) {
@@ -755,15 +761,26 @@ footer {
 
   #myName {
     align-items: baseline;
+    padding: 0 1rem;
+  }
+
+  .myName {
+    font-size: medium;
   }
 
   #navBarItems {
     flex-direction: row;
-    width: 100%;
+    width: 80%;
+    align-items: center;
     justify-content: center;
     top: 0;
     z-index: 1000;
     padding-top: 0.15rem;
+  }
+
+  #navBarItemsLarge {
+    display: flex;
+    justify-content: center;
   }
 
   #navBarItems.hide {
@@ -780,6 +797,11 @@ footer {
     background: transparent;
     border-radius: none;
     box-shadow: none;
+  }
+
+  #themeChanger img {
+    width: 30px;
+    height: 30px;
   }
   /*End Navigation Bar*/
 }
