--- a/styles/lightDesign_v1.5.css
+++ b/styles/lightDesign_v1.5.css
@@ -333,6 +333,13 @@ section {
   object-fit: cover;
 }
 
+#landing2 {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
+}
+
 #intro {
   text-align: justify;
   font-size: large;
