--- a/styles/lightDesign_v1.5.css
+++ b/styles/lightDesign_v1.5.css
@@ -865,4 +865,30 @@ footer {
     gap: 5px;
   }
   /*End About Me Section*/
+
+  /*Projects Section*/
+  .projectContainer {
+    flex-direction: row;
+  }
+
+  .projectContainer:nth-child(4) {
+    flex-direction: row-reverse;
+  }
+
+  .projectContainer:nth-child(6) {
+    flex-direction: row-reverse;
+  }
+
+  .projectContainer1 {
+    flex: 3;
+  }
+
+  .projectContainer2 {
+    display: flex;
+    flex-direction: column;
+    flex: 2.5;
+    align-items: center;
+  }
+
+  /*End Projects Section*/
 }
