Improving design responsiveness

--- a/styles/lightDesign_v1.5.css
+++ b/styles/lightDesign_v1.5.css
@@ -446,6 +446,12 @@ img.projectPictures {
   padding-bottom: 2.5rem;
 }
 
+.projectContainer2 {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 /*INDIVIDUAL PROJECTS*/
 /*
 .sourceCodeButton {
