--- a/styles/lightDesign_v1.5.css
+++ b/styles/lightDesign_v1.5.css
@@ -67,11 +67,13 @@ button.secondaryButtons {
   justify-content: space-between;
   align-items: center;
   cursor: pointer;
+  padding: 0.75rem 1rem;
 }
 
 .secondaryButtonText {
   padding: 0.1rem;
   font-weight: bold;
+  font-size: large;
 }
 
 #software-development,
