--- a/styles/lightDesign_v1.5.css
+++ b/styles/lightDesign_v1.5.css
@@ -67,7 +67,7 @@ button.secondaryButtons {
   justify-content: space-between;
   align-items: center;
   cursor: pointer;
-  padding: 0.75rem 1rem;
+  padding: 0.5rem;
 }
 
 .secondaryButtonText {
