Eliminated unused assets. Renamed folders for organizational purposes

--- a/styles/lightDesign_v1.5.css
+++ b/styles/lightDesign_v1.5.css
@@ -768,6 +768,7 @@ textarea {
   align-items: center;
   justify-content: space-evenly;
   max-width: 75%;
+  cursor: pointer;
 }
 
 /*END SOCIAL MEDIA SECTION*/
