Minor design fix

--- a/styles/lightDesign_v1.5.css
+++ b/styles/lightDesign_v1.5.css
@@ -929,6 +929,11 @@ footer {
     position: fixed;
   }
 
+  .navBarItem:hover {
+    transform: translateY(-4px);
+    box-shadow: none;
+  }
+
   #navBarItemsLarge {
     display: flex;
     justify-content: center;
