--- a/styles/lightDesign_v1.5.css
+++ b/styles/lightDesign_v1.5.css
@@ -541,6 +541,7 @@ img.projectPictures {
   justify-content: space-evenly;
   align-items: center;
   padding: 0.75rem 1rem;
+  cursor: pointer;
 }
 
 .sourceCodeButton:active {
@@ -561,6 +562,7 @@ img.projectPictures {
   align-items: center;
   justify-content: space-evenly;
   padding: 0.75rem 1rem;
+  cursor: pointer;
 }
 
 .youtubeButton:active {
