--- a/styles/lightDesign_v1.5.css
+++ b/styles/lightDesign_v1.5.css
@@ -485,7 +485,6 @@ section {
 
 /*PROJECTS SECTION*/
 img.projectPictures {
-  aspect-ratio: initial;
   height: auto;
   width: 95%;
   max-width: 750px;
@@ -713,6 +712,7 @@ div.col.projectType {
   flex-direction: column;
   align-items: center;
   padding: 0 1rem;
+  width: 90%;
 }
 
 .pageclip-form__submit::after {
